# slice_channel

./: .gitignore  README.md  areaslice.ipynb  pyproject.toml
geometry/: polygons_construct.py  slices.py
notebook/: example.ipynb
src/: circle_geoms.py  msms.py  msms_surfslice.py  msms_surfslices.py  slices.py  utils.py
